--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -10,87 +11,137 @@
   <title>Quiz App</title>
 </head>
 
-<body class="container">
-  <header class="col-11 m-auto header">
-    <div class="d-flex justify-content-around align">
-      <h1 class="logo">Quizz</h1>
-      <h3 class="progresso">Pontuação: <span class="userScore">0</span></h3>
+<body>
+  <div class="d-flex p-3 header ">
+    <div class="container">
+      <h2 class="logo">Quizz</h2>
+      <h2 class="progresso">Pontuação: <span class="userScore">0%</span></h2>
     </div>
-  </header>
-  <main class="container col-11">
+  </div>
+  <div class="box-container rounded-3">
+    <div class="container main">
+      <h3 class="title-quiz text-center pt-5">Quiz Sobre Saúde 💪</h3>
+      <form class="quiz-form text-dark">
+        <div class="my-5">
+          <p class="lead font-weight-normal">1. Qual porcentagem da população mundial é obesa?</p>
+          <div class="form-check my-2 text-grey-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="A" checked>
+              12%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="B">
+              30%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="C">
+              20%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion1" value="D">
+              10%
+            </label>
+          </div>
+        </div>
 
-    <form class="quiz-form text-dark">
-      <div class="my-5">
-        <p class="lead font-weight-normal">1. "O Mal Disposto" é o nome dado para o filme:</p>
-        <div class="form-check my-2 text-grey-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion1" value="A" checked>
-            Psicose
-          </label>
+        <div class="my-5">
+          <p class="lead font-weight-normal">2. Que porcentagem de americanos vai de bicicleta para o trabalho?</p>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="A" checked>
+              10%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="B">
+              1%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="C">
+              20%
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion2" value="D">
+              15%
+            </label>
+          </div>
         </div>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion1" value="B">
-            Meu Malvado Favorito
-          </label>
-        </div>
-      </div>
 
-      <div class="my-5">
-        <p class="lead font-weight-normal">2. "O Aviso" é o nome dado para o filme de terror:</p>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion2" value="A" checked>
-            O Grito
-          </label>
+        <div class="my-5">
+          <p class="lead font-weight-normal">3. Qual é a gordura mais saudável?</p>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="A" checked>
+              Ovos
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="B">
+              Azeite extra virgem
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="C">
+              Azeite de Oliva
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion3" value="D">
+              Oleo de cozinha
+            </label>
+          </div>
         </div>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion2" value="B">
-            O Chamado
-          </label>
-        </div>
-      </div>
 
-      <div class="my-5">
-        <p class="lead font-weight-normal">3. "Uma Família a Beira de um Ataque de Nervos" é o título de:</p>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion3" value="A" checked>
-            Família do Bagulho
-          </label>
+        <div class="my-5">
+          <p class="lead font-weight-normal">4. Qual vitamina é importante para a saúde óssea?</p>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="A" checked>
+              Vitamina C
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="B">
+              Vitamina D
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="C">
+              Vitamina A
+            </label>
+          </div>
+          <div class="form-check my-2 text-dark-50">
+            <label class="form-check-label">
+              <input type="radio" name="inputQuestion4" value="D">
+              Vitamina B
+            </label>
+          </div>
         </div>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion3" value="B">
-            Pequena Miss Sunshine
-          </label>
-        </div>
-      </div>
 
-      <div class="my-5">
-        <p class="lead font-weight-normal">4. "O Rei dos Gazeteiros" é o famoso filme:</p>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion4" value="A" checked>
-            O Lobo de Wall Street
-          </label>
+        <div class="text-center py-5">
+          <button class="btn button-color">Enviar</button>
         </div>
-        <div class="form-check my-2 text-dark-50">
-          <label class="form-check-label">
-            <input type="radio" name="inputQuestion4" value="B">
-            Curtindo a Vida Adoidado
-          </label>
-        </div>
-      </div>
-
-      <div class="text-center">
-        <button class="btn button-color">Enviar</button>
-      </div>
-    </form>
+      </form>
     </div>
-    </div>
-  </main>
+  </div>
+  </div>
+  </div>
 
 
   <script src="app.js"></script>
