--- a/index.html
+++ b/index.html
@@ -12,137 +12,7 @@
 </head>
 
 <body>
-  <div class="d-flex p-3 header ">
-    <div class="container">
-      <h2 class="logo">Quizz</h2>
-      <h2 class="progresso">Pontuação: <span class="userScore">0%</span></h2>
-    </div>
-  </div>
-  <div class="box-container rounded-3">
-    <div class="container main">
-      <h3 class="title-quiz text-center pt-5">Quiz Sobre Saúde 💪</h3>
-      <form class="quiz-form text-dark">
-        <div class="my-5">
-          <p class="lead font-weight-normal">1. Qual porcentagem da população mundial é obesa?</p>
-          <div class="form-check my-2 text-grey-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion1" value="A" checked>
-              12%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion1" value="B">
-              30%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion1" value="C">
-              20%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion1" value="D">
-              10%
-            </label>
-          </div>
-        </div>
-
-        <div class="my-5">
-          <p class="lead font-weight-normal">2. Que porcentagem de americanos vai de bicicleta para o trabalho?</p>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion2" value="A" checked>
-              10%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion2" value="B">
-              1%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion2" value="C">
-              20%
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion2" value="D">
-              15%
-            </label>
-          </div>
-        </div>
-
-        <div class="my-5">
-          <p class="lead font-weight-normal">3. Qual é a gordura mais saudável?</p>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion3" value="A" checked>
-              Ovos
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion3" value="B">
-              Azeite extra virgem
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion3" value="C">
-              Azeite de Oliva
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion3" value="D">
-              Oleo de cozinha
-            </label>
-          </div>
-        </div>
-
-        <div class="my-5">
-          <p class="lead font-weight-normal">4. Qual vitamina é importante para a saúde óssea?</p>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion4" value="A" checked>
-              Vitamina C
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion4" value="B">
-              Vitamina D
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion4" value="C">
-              Vitamina A
-            </label>
-          </div>
-          <div class="form-check my-2 text-dark-50">
-            <label class="form-check-label">
-              <input type="radio" name="inputQuestion4" value="D">
-              Vitamina B
-            </label>
-          </div>
-        </div>
-
-        <div class="text-center py-5">
-          <button class="btn button-color">Enviar</button>
-        </div>
-      </form>
-    </div>
-  </div>
-  </div>
-  </div>
-
+  <h1>Quizz</h1>
 
   <script src="app.js"></script>
 </body>
