--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="container">
       <div class="my-3 text-info border border-info rounded p-4">
         <h2>Você conhece a banda Queen o bastante para acertar as questões abaixo?</h2>
-        <h2 class="pontuacao text-dark d-none text-center py-2">Sua Pontuação foi <span class="text-warning">0%</span>
+        <h2 class="final-score-container text-dark d-none text-center py-2">Sua Pontuação foi <span
+            class="text-warning">0%</span>
           dos pontos!
         </h2>
       </div>
