--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="d-flex flex-row align-items-start justify-content-center flex-wrap">
           <div class="my-5">
             <div class="card cover mx-4">
-              <img src="https://www.torredevigilancia.com/bohemian-rhapsody-assista-aos-bastidores-de-i-want-to-break-free/"
+              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a8/I_Want_To_Break_Free.jpg/250px-I_Want_To_Break_Free.jpg"
                 class="card-img-top" alt="queen-cover">
               <div class="card-body">
                 <p class="card-text text-dark">Lançada em 1984, a musica da capa faz parte do album The Works, qual a
